--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <html lang="en">
 
   <head>
-      <title>CSS Template</title>
+      <title>Solar System Exploration: Planets: Earth's Moon: Overview</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
+
+    <!--this is beginning of white section on right side of webpage -->
+    <div id="white_section">
+      <ul id="path">
+        <li><a href="#">SSE Home</a><span>  >  </span></li>
+        <li><a href="#">Planets</a><span>  >  </span></li>
+        <li><a href="#">Earth's Moon</a><span>  >    </span></li>
+        <li>Overview</li>
+        <div id="path_bottom_border"></div>
+      </ul>
+    </div>
 
   </body>
 
