Added empty #blue_within_white with approximate background color and a top box-shadow

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!--this is beginning of white section on right side of webpage -->
     <div id="white_section">
+
       <ul id="path">
         <li><a href="#">SSE Home</a><span>  >  </span></li>
         <li><a href="#">Planets</a><span>  >  </span></li>
@@ -20,6 +21,12 @@
         <li>Overview</li>
         <div id="path_bottom_border"></div>
       </ul>
+      <h2>Earth's Moon</h2>
+
+      <div id="blue_within_white">
+      #blue_within_white
+      </div>
+
     </div>
 
   </body>
