added images, started markup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
   </head>
 
   <body>
-
+  <nav>
+  <ul>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+      <ul>
+        <li><a href="#">Our Solar System</a></li>
+        <li><a href="#">Sun</a></li>
+        <li><a href="#">Mercury</a></li>
+        <li><a href="#">Venus</a></li>
+        <li><a href="#">Earth</a></li>
+        <li><a href="#">Earth's Moon</a></li>
+        <li><a href="#">Mars</a></li>
+        <li><a href="#">Asteroids</a></li>
+        <li><a href="#">Meteors & Meteorites</a></li>
+        <li><a href="#">Jupiter</a></li>
+        <li><a href="#">Saturn</a></li>
+        <li><a href="#">Uranus</a></li>
+        <li><a href="#">Neptune</a></li>
+        <li><a href="#">Dwarf Planets</a></li>
+        <li><a href="#">Comets</a></li>
+        <li><a href="#">Kuiper Belt & Oort Cloud</a></li>
+        <li><a href="#">Beyond Our Solar System</a></li>
+      </ul>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+  </ul>
+  </nav>
   </body>
 
 </html>
