--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
   <head>
-      <title>CSS Template</title>
+      <title>Solar System Exploration: Planets: Earth's Moon: Overview</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
@@ -11,6 +11,8 @@
 
   <body>
 
+    <div class="secondary">
+    </div>
   </body>
 
 </html>
