starting folder tab links

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 
       <div id="blue_within_white">
       #blue_within_white
+        <ul>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Missions</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#">Read More</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Facts & Figures</a></li>
+        </ul>
       </div>
 
     </div>
