--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
   </head>
 
   <body>
-  <nav>
-  <ul>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
+    <nav>
       <ul>
-        <li><a href="#">Our Solar System</a></li>
-        <li><a href="#">Sun</a></li>
-        <li><a href="#">Mercury</a></li>
-        <li><a href="#">Venus</a></li>
-        <li><a href="#">Earth</a></li>
-        <li><a href="#">Earth's Moon</a></li>
-        <li><a href="#">Mars</a></li>
-        <li><a href="#">Asteroids</a></li>
-        <li><a href="#">Meteors & Meteorites</a></li>
-        <li><a href="#">Jupiter</a></li>
-        <li><a href="#">Saturn</a></li>
-        <li><a href="#">Uranus</a></li>
-        <li><a href="#">Neptune</a></li>
-        <li><a href="#">Dwarf Planets</a></li>
-        <li><a href="#">Comets</a></li>
-        <li><a href="#">Kuiper Belt & Oort Cloud</a></li>
-        <li><a href="#">Beyond Our Solar System</a></li>
+        <li><a href="#"><img src="images/leftnav_home_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_news_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_planets_sel.jpg"></a></li>
+          <ul>
+            <li><a href="#">Our Solar System</a></li>
+            <li><a href="#">Sun</a></li>
+            <li><a href="#">Mercury</a></li>
+            <li><a href="#">Venus</a></li>
+            <li><a href="#">Earth</a></li>
+            <li><a href="#">Earth's Moon</a></li>
+            <li><a href="#">Mars</a></li>
+            <li><a href="#">Asteroids</a></li>
+            <li><a href="#">Meteors & Meteorites</a></li>
+            <li><a href="#">Jupiter</a></li>
+            <li><a href="#">Saturn</a></li>
+            <li><a href="#">Uranus</a></li>
+            <li><a href="#">Neptune</a></li>
+            <li><a href="#">Dwarf Planets</a></li>
+            <li><a href="#">Comets</a></li>
+            <li><a href="#">Kuiper Belt & Oort Cloud</a></li>
+            <li><a href="#">Beyond Our Solar System</a></li>
+          </ul>
+        <li><a href="#"><img src="images/leftnav_missions_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_scitech_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_multimedia_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_people_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_kids_off.jpg"></a></li>
+        <li><a href="#"><img src="images/leftnav_educ_off.jpg"></a></li>
       </ul>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-  </ul>
-  </nav>
+    </nav>
   </body>
 
 </html>
