--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="secondary">
       <div class="facts">
-        <header>Just the Facts</header>
+        <header class="gold">Just the Facts</header>
         <div class="units">
           <ul>
             <li class="active">Metric</li>
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="resources">
-      <header>Resources</header>
+      <header class="blue">Resources</header>
       <ul>
         <li>Missions to the Moon</li>
         <li>Images of the Moon</li>
@@ -44,7 +44,7 @@
       </ul>
     </div>
     <div class="calendar date-event">
-      <header>Calendar</header>
+      <header class="gold">Calendar</header>
       <ul>
         <li><span>19 Sep 2013: </span>Full Moon (Harvest Moon)</li>
         <li><span>26 Sep 2013: </span>Moon-LADEE Homeschool Day (11:00 am - 3:00 pm)</li>
@@ -54,7 +54,7 @@
       </ul>
     </div>
     <div class="spotlight">
-      <header>People Spotlight</header>
+      <header class="red">People Spotlight</header>
       <ul>
         <li class="featured">
           <span class="name">Charles "Karl" Hibbitts</span>
@@ -74,7 +74,7 @@
       </ul>
     </div>
     <div class="headlines date-event">
-      <header>Headlines</header>
+      <header class="green">Headlines</header>
       <ul>
         <li><span>11 Sep 2013: </span>LADEE Project Manager Update: Initial Checkout Complete</li>
         <li><span>7 Sep 2013: </span>LADEE Launches, Heads for the Moon</li>
@@ -85,7 +85,7 @@
       </ul>
     </div>
     <div class="features date-event">
-      <header>Science & Technology Features</header>
+      <header class="red">Science & Technology Features</header>
       <ul>
         <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
         <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
