finished styling of folder tabs.

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
       <h2>Earth's Moon</h2>
 
       <div id="blue_within_white">
-      #blue_within_white
-        <ul>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Missions</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Overview</a></li>
-          <li><a href="#">Read More</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Facts & Figures</a></li>
+        <ul class="tabs_ul">
+          <li class="tabs"><a href="#" id="education_tab">Education</a></li>
+          <li class="tabs"><a href="#">Missions</a></li>
+          <li class="tabs"><a href="#">News</a></li>
+          <li class="tabs"><a href="#">FAQ</a></li>
+        </ul>
+        <ul class="tabs_ul">
+          <li class="tabs" ><a href="#" id="overview">Overview</a></li>
+          <li class="tabs"><a href="#">Read More</a></li>
+          <li class="tabs"><a href="#">Gallery</a></li>
+          <li class="tabs"><a href="#">Facts & Figures</a></li>
         </ul>
       </div>
 
