--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </ul>
     </div>
     <div class="features date-event">
-      <header class="red">Science & Technology Features</header>
+      <header class="red">Science &amp; Technology Features</header>
       <ul>
         <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
         <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
