--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
       <header class="red">People Spotlight</header>
       <ul>
         <li class="featured">
+          <img src="images/HibbittsC-main.jpg">
           <span class="name">Charles "Karl" Hibbitts</span>
           "Don't worry about your exact path, but keep in mind where you want to end up." &#x25B6;
+          <div class="clear"></div>
         </li>
         <li>
-          <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)<br></span>
+          <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)</span>
           Astronomer
         </li>
         <li>
-          <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)<br></span>
+          <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)</span>
           Planetary Scientist
         </li>
         <li><span class="name">Glenn Light</span> - Director, Department of Sensor Systems and Nondestructive Evaluation</li>
