added top banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-
+    <img src="images/lunarportal_banner4.jpg">
     <div class="secondary">
       <div class="facts">
         <header class="gold">Just the Facts</header>
