Removed the line under Overview

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
           <li class="tabs"><a href="#">Gallery</a></li>
           <li class="tabs"><a href="#">Facts & Figures</a></li>
         </ul>
+
+        <div id="white_middle_container">
+          <div id="moon_box">
+            <img src="images/moon.jpg" alt="moon photograph">
+            <figcaption>The Galileo spacecraft sent back this image of the Moon as it headed into the outer solar system. The distinct bright ray crater at the bottom of the image is the Tycho impact basin.</figcaption>
+          </div>
+        </div>
       </div>
 
     </div>
