--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li>Scientific Notation</li>
           </ul>
         </div>
+        <div class="clear"></div>
         <div class="factlist">
           <ul>
             <li><span>Orbit Size (semi-major axis):</span> 384,000 km</li>
