finished nav styling and positioning

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
           <li><a href="#"><img src="images/leftnav_educ_off.jpg"></a></li>
         </ul>
       </nav>
+      <div class="sidebar_misc">
+        <div class="searchbox">
+          <img src="images/leftnav_searchbox_bg.png">
+          <img src="images/leftnav_searchbox_submit_off.png">
+          <div class="clear"></div>
+        </div>
+        <img src="images/followus_off.png">
+        <img src="images/webby.png">
+      </div>
     </div>
   </body>
 
