--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
             <img src="images/moon.jpg" alt="moon photograph">
             <figcaption>The Galileo spacecraft sent back this image of the Moon as it headed into the outer solar system. The distinct bright ray crater at the bottom of the image is the Tycho impact basin.</figcaption>
           </div>
+          <h3>10 Need-to-Know Things About Earth's Moon:</h3>
+          <ul>
+            <li>If the sun were as tall as a typical front door, Earth would be the size of a nickel and the moon would the size of a green pea.</li>
+            <li>The moon is Earth's satellite and orbits the Earth at a distance of about 384 thousand km (239 thousand miles) or 0.00257 AU.</li>
+            <li>The moon makes a complete orbit around Earth in 27 Earth days and rotates or spins at that same rate, or in that same amount of time. This causes the moon to keep the same side or face towards Earth during the course of its orbit.</li>
+            <li>The moon is a rocky, solid-surface body, with much of its surface cratered and pitted from impacts.</li>
+            <li>The moon has a very thin and tenuous (weak) atmosphere, called an exosphere.</li>
+            <li>The moon has no moons.</li>
+            <li>The moon has no rings.</li>
+            <li>More than 100 spacecraft been launched to explore the moon. It is the only celestial a body beyond Earth that has been visited by human beings (<a href="http://solarsystem.nasa.gov/missions/profile.cfm?MCode=Apollo">The Apollo Program</a>).</li>
+            <li>The moon's weak atmosphere and its lack of liquid water cannot support life as we know it.</li>
+            <li>Surface features that create the face known as the "Man in the moon" are impact basins on the moon that are filled with dark basalt rocks.</li>
+          </ul>
         </div>
       </div>
 
