Removed extra closed div tags.

--- a/index.html
+++ b/index.html
@@ -99,97 +99,99 @@
             <li>Surface features that create the face known as the "Man in the moon" are impact basins on the moon that are filled with dark basalt rocks.</li>
           </ul>
 
-              <img src="images/lunarportal_banner4.jpg">
-    <div class="secondary">
-      <div class="facts">
-        <header class="gold">Just the Facts</header>
-        <div class="units">
-          <ul>
-            <li class="active">Metric</li>
-            <li>English</li>
-            <li>Scientific Notation</li>
-          </ul>
-        </div>
-        <div class="clear"></div>
-        <div class="factlist">
-          <ul>
-            <li><span>Orbit Size (semi-major axis):</span> 384,000 km</li>
-            <li><span>Mean Radius:</span> 1737.5 km</li>
-            <li><span>Volume: </span> 21,971,669,064 km&sup3;</li>
-            <li><span>Mass:</span> 73,476,730,924,573,500,000,000 kg </li>
-            <li>More Facts &#x25B6;</li>
-          </ul>
-        </div>
-    </div>
-    <div class="resources">
-      <header class="blue">Resources</header>
-      <ul>
-        <li>Missions to the Moon</li>
-        <li>Images of the Moon</li>
-        <li>Videos about the Moon</li>
-        <li>NASA's Lunar Portal</li>
-        <li>Consolidated Lunar Atlas</li>
-        <li>Lunar Sample Laboratory (NASA Johnson Space Center)</li>
-        <li>Compare the Moon to other Planets/Moons</li>
-      </ul>
-    </div>
-    <div class="calendar date-event">
-      <header class="gold">Calendar</header>
-      <ul>
-        <li><span>19 Sep 2013: </span>Full Moon (Harvest Moon)</li>
-        <li><span>26 Sep 2013: </span>Moon-LADEE Homeschool Day (11:00 am - 3:00 pm)</li>
-        <li><span>12 Oct 2013: </span>Skies Daily show - LADEE the first moon launch from Virginia (1:30 pm - 5:00 PM)</li>
-        <li><span>12 Oct 2013: </span>International Observe the Moon Night</li>
-        <li><span>18 Oct 2013: </span>LiveSky Planetarium show LADEE</li>
-      </ul>
-    </div>
-    <div class="spotlight">
-      <header class="red">People Spotlight</header>
-      <ul>
-        <li class="featured">
-          <img src="images/HibbittsC-main.jpg">
-          <span class="name">Charles "Karl" Hibbitts</span>
-          "Don't worry about your exact path, but keep in mind where you want to end up." &#x25B6;
-          <div class="clear"></div>
-        </li>
-        <li>
-          <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)</span>
-          Astronomer
-        </li>
-        <li>
-          <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)</span>
-          Planetary Scientist
-        </li>
-        <li><span class="name">Glenn Light</span> - Director, Department of Sensor Systems and Nondestructive Evaluation</li>
-        <li><span class="name">Al Hibbs</span> - Scientist</li>
-        <li class="more">Meet More Space Explorers &#x25B6;</li>
-      </ul>
-    </div>
-    <div class="headlines date-event">
-      <header class="green">Headlines</header>
-      <ul>
-        <li><span>11 Sep 2013: </span>LADEE Project Manager Update: Initial Checkout Complete</li>
-        <li><span>7 Sep 2013: </span>LADEE Launches, Heads for the Moon</li>
-        <li><span>4 Sep 2013: </span>NASA Announces Media, Public Events for Upcoming Lunar Mission Launch</li>
-        <li><span>4 Sep 2013: </span>LADEE Project Manager Update: LADEE Ready for Launch</li>
-        <li><span>27 Aug 2013: </span>NASA-Funded Scientists Detect Water on Moon's Surface that Hints at Water Below</li>
-        <li class="more">More Headlines More Headlines &#x25B6;</li>
-      </ul>
-    </div>
-    <div class="features date-event">
-      <header class="red">Science &amp; Technology Features</header>
-      <ul>
-        <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
-        <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
-        <li><span>28 Aug 2013: </span>Water on Moon's Surface Hints at Water Below</li>
-        <li><span>28 Aug 2013: </span>Space Laser To Prove Increased Broadband Possible</li>
-        <li><span>21 Aug 2013: </span>LADEE Launch Visibility</li>
-      </ul>
-    </div>
-  </div>
-        </div>
-      </div>
-    </div>
+          <img src="images/lunarportal_banner4.jpg">
+          <div class="secondary">
+            <div class="facts">
+              <header class="gold">Just the Facts</header>
+              <div class="units">
+                <ul>
+                  <li class="active">Metric</li>
+                  <li>English</li>
+                  <li>Scientific Notation</li>
+                </ul>
+              </div>
+              <div class="clear"></div>
+              <div class="factlist">
+                <ul>
+                  <li><span>Orbit Size (semi-major axis):</span> 384,000 km</li>
+                  <li><span>Mean Radius:</span> 1737.5 km</li>
+                  <li><span>Volume: </span> 21,971,669,064 km&sup3;</li>
+                  <li><span>Mass:</span> 73,476,730,924,573,500,000,000 kg </li>
+                  <li>More Facts &#x25B6;</li>
+                </ul>
+              </div>
+          </div>
+
+          <div class="resources">
+            <header class="blue">Resources</header>
+            <ul>
+              <li>Missions to the Moon</li>
+              <li>Images of the Moon</li>
+              <li>Videos about the Moon</li>
+              <li>NASA's Lunar Portal</li>
+              <li>Consolidated Lunar Atlas</li>
+              <li>Lunar Sample Laboratory (NASA Johnson Space Center)</li>
+              <li>Compare the Moon to other Planets/Moons</li>
+            </ul>
+          </div>
+
+          <div class="calendar date-event">
+            <header class="gold">Calendar</header>
+            <ul>
+              <li><span>19 Sep 2013: </span>Full Moon (Harvest Moon)</li>
+              <li><span>26 Sep 2013: </span>Moon-LADEE Homeschool Day (11:00 am - 3:00 pm)</li>
+              <li><span>12 Oct 2013: </span>Skies Daily show - LADEE the first moon launch from Virginia (1:30 pm - 5:00 PM)</li>
+              <li><span>12 Oct 2013: </span>International Observe the Moon Night</li>
+              <li><span>18 Oct 2013: </span>LiveSky Planetarium show LADEE</li>
+            </ul>
+          </div>
+
+          <div class="spotlight">
+            <header class="red">People Spotlight</header>
+            <ul>
+              <li class="featured">
+                <img src="images/HibbittsC-main.jpg">
+                <span class="name">Charles "Karl" Hibbitts</span>
+                "Don't worry about your exact path, but keep in mind where you want to end up." &#x25B6;
+                <div class="clear"></div>
+              </li>
+              <li>
+                <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)</span>
+                Astronomer
+              </li>
+              <li>
+                <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)</span>
+                Planetary Scientist
+              </li>
+              <li><span class="name">Glenn Light</span> - Director, Department of Sensor Systems and Nondestructive Evaluation</li>
+              <li><span class="name">Al Hibbs</span> - Scientist</li>
+              <li class="more">Meet More Space Explorers &#x25B6;</li>
+            </ul>
+          </div>
+
+          <div class="headlines date-event">
+            <header class="green">Headlines</header>
+            <ul>
+              <li><span>11 Sep 2013: </span>LADEE Project Manager Update: Initial Checkout Complete</li>
+              <li><span>7 Sep 2013: </span>LADEE Launches, Heads for the Moon</li>
+              <li><span>4 Sep 2013: </span>NASA Announces Media, Public Events for Upcoming Lunar Mission Launch</li>
+              <li><span>4 Sep 2013: </span>LADEE Project Manager Update: LADEE Ready for Launch</li>
+              <li><span>27 Aug 2013: </span>NASA-Funded Scientists Detect Water on Moon's Surface that Hints at Water Below</li>
+              <li class="more">More Headlines More Headlines &#x25B6;</li>
+            </ul>
+          </div>
+
+          <div class="features date-event">
+            <header class="red">Science &amp; Technology Features</header>
+            <ul>
+              <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
+              <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
+              <li><span>28 Aug 2013: </span>Water on Moon's Surface Hints at Water Below</li>
+              <li><span>28 Aug 2013: </span>Space Laser To Prove Increased Broadband Possible</li>
+              <li><span>21 Aug 2013: </span>LADEE Launch Visibility</li>
+            </ul>
+          </div>
+    </div> <!--end of #white_section -->
   </body>
 
 </html>
