Added page wrapper

--- a/index.html
+++ b/index.html
@@ -10,188 +10,189 @@
   </head>
 
   <body>
-
-    <div class="sidebar">
-      <nav>
-        <ul>
-          <li><a href="#"><img src="images/leftnav_home_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_news_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_planets_sel.jpg"></a></li>
-            <ul>
-              <li><a href="#">Our Solar System</a></li>
-              <li><a href="#">Sun</a></li>
-              <li><a href="#">Mercury</a></li>
-              <li><a href="#">Venus</a></li>
-              <li><a href="#">Earth</a></li>
-              <li><a href="#">Earth's Moon</a></li>
-              <li><a href="#">Mars</a></li>
-              <li><a href="#">Asteroids</a></li>
-              <li><a href="#">Meteors & Meteorites</a></li>
-              <li><a href="#">Jupiter</a></li>
-              <li><a href="#">Saturn</a></li>
-              <li><a href="#">Uranus</a></li>
-              <li><a href="#">Neptune</a></li>
-              <li><a href="#">Dwarf Planets</a></li>
-              <li><a href="#">Comets</a></li>
-              <li><a href="#">Kuiper Belt & Oort Cloud</a></li>
-              <li><a href="#">Beyond Our Solar System</a></li>
-            </ul>
-          <li><a href="#"><img src="images/leftnav_missions_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_scitech_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_multimedia_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_people_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_kids_off.jpg"></a></li>
-          <li><a href="#"><img src="images/leftnav_educ_off.jpg"></a></li>
-        </ul>
-      </nav>
-      <div class="sidebar_misc">
-        <div class="searchbox">
-          <img src="images/leftnav_searchbox_bg.png">
-          <img src="images/leftnav_searchbox_submit_off.png">
-          <div class="clear"></div>
-        </div>
-        <img src="images/followus_off.png">
-        <img src="images/webby.png">
-      </div>
-    </div>
-    <!--this is beginning of white section on right side of webpage -->
-    <div id="white_section">
-
-      <ul id="path">
-        <li><a href="#">SSE Home</a><span>  >  </span></li>
-        <li><a href="#">Planets</a><span>  >  </span></li>
-        <li><a href="#">Earth's Moon</a><span>  >    </span></li>
-        <li>Overview</li>
-        <div id="path_bottom_border"></div>
-      </ul>
-      <h2>Earth's Moon</h2>
-
-      <div id="blue_within_white">
-        <ul class="tabs_ul">
-          <li class="tabs"><a href="#" id="education_tab">Education</a></li>
-          <li class="tabs"><a href="#">Missions</a></li>
-          <li class="tabs"><a href="#">News</a></li>
-          <li class="tabs"><a href="#">FAQ</a></li>
-        </ul>
-        <ul class="tabs_ul">
-          <li class="tabs" ><a href="#" id="overview">Overview</a></li>
-          <li class="tabs"><a href="#">Read More</a></li>
-          <li class="tabs"><a href="#">Gallery</a></li>
-          <li class="tabs"><a href="#">Facts & Figures</a></li>
-        </ul>
-
-        <div id="white_middle_container">
-          <div id="moon_box">
-            <img src="images/moon.jpg" alt="moon photograph">
-            <figcaption>The Galileo spacecraft sent back this image of the Moon as it headed into the outer solar system. The distinct bright ray crater at the bottom of the image is the Tycho impact basin.</figcaption>
-          </div>
-          <h3>10 Need-to-Know Things About Earth's Moon:</h3>
+    <div id="wrapper">
+      <div class="sidebar">
+        <nav>
           <ul>
-            <li>If the sun were as tall as a typical front door, Earth would be the size of a nickel and the moon would the size of a green pea.</li>
-            <li>The moon is Earth's satellite and orbits the Earth at a distance of about 384 thousand km (239 thousand miles) or 0.00257 AU.</li>
-            <li>The moon makes a complete orbit around Earth in 27 Earth days and rotates or spins at that same rate, or in that same amount of time. This causes the moon to keep the same side or face towards Earth during the course of its orbit.</li>
-            <li>The moon is a rocky, solid-surface body, with much of its surface cratered and pitted from impacts.</li>
-            <li>The moon has a very thin and tenuous (weak) atmosphere, called an exosphere.</li>
-            <li>The moon has no moons.</li>
-            <li>The moon has no rings.</li>
-            <li>More than 100 spacecraft been launched to explore the moon. It is the only celestial a body beyond Earth that has been visited by human beings (<a href="http://solarsystem.nasa.gov/missions/profile.cfm?MCode=Apollo">The Apollo Program</a>).</li>
-            <li>The moon's weak atmosphere and its lack of liquid water cannot support life as we know it.</li>
-            <li>Surface features that create the face known as the "Man in the moon" are impact basins on the moon that are filled with dark basalt rocks.</li>
+            <li><a href="#"><img src="images/leftnav_home_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_news_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_planets_sel.jpg"></a></li>
+              <ul>
+                <li><a href="#">Our Solar System</a></li>
+                <li><a href="#">Sun</a></li>
+                <li><a href="#">Mercury</a></li>
+                <li><a href="#">Venus</a></li>
+                <li><a href="#">Earth</a></li>
+                <li><a href="#">Earth's Moon</a></li>
+                <li><a href="#">Mars</a></li>
+                <li><a href="#">Asteroids</a></li>
+                <li><a href="#">Meteors & Meteorites</a></li>
+                <li><a href="#">Jupiter</a></li>
+                <li><a href="#">Saturn</a></li>
+                <li><a href="#">Uranus</a></li>
+                <li><a href="#">Neptune</a></li>
+                <li><a href="#">Dwarf Planets</a></li>
+                <li><a href="#">Comets</a></li>
+                <li><a href="#">Kuiper Belt & Oort Cloud</a></li>
+                <li><a href="#">Beyond Our Solar System</a></li>
+              </ul>
+            <li><a href="#"><img src="images/leftnav_missions_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_scitech_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_multimedia_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_people_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_kids_off.jpg"></a></li>
+            <li><a href="#"><img src="images/leftnav_educ_off.jpg"></a></li>
+          </ul>
+        </nav>
+        <div class="sidebar_misc">
+          <div class="searchbox">
+            <img src="images/leftnav_searchbox_bg.png">
+            <img src="images/leftnav_searchbox_submit_off.png">
+            <div class="clear"></div>
+          </div>
+          <img src="images/followus_off.png">
+          <img src="images/webby.png">
+        </div>
+      </div>
+      <!--this is beginning of white section on right side of webpage -->
+      <div id="white_section">
+
+        <ul id="path">
+          <li><a href="#">SSE Home</a><span>  >  </span></li>
+          <li><a href="#">Planets</a><span>  >  </span></li>
+          <li><a href="#">Earth's Moon</a><span>  >    </span></li>
+          <li>Overview</li>
+          <div id="path_bottom_border"></div>
+        </ul>
+        <h2>Earth's Moon</h2>
+
+        <div id="blue_within_white">
+          <ul class="tabs_ul">
+            <li class="tabs"><a href="#" id="education_tab">Education</a></li>
+            <li class="tabs"><a href="#">Missions</a></li>
+            <li class="tabs"><a href="#">News</a></li>
+            <li class="tabs"><a href="#">FAQ</a></li>
+          </ul>
+          <ul class="tabs_ul">
+            <li class="tabs" ><a href="#" id="overview">Overview</a></li>
+            <li class="tabs"><a href="#">Read More</a></li>
+            <li class="tabs"><a href="#">Gallery</a></li>
+            <li class="tabs"><a href="#">Facts & Figures</a></li>
           </ul>
 
-          <img src="images/lunarportal_banner4.jpg">
-          <div class="secondary">
-            <div class="facts">
-              <header class="gold">Just the Facts</header>
-              <div class="units">
-                <ul>
-                  <li class="active">Metric</li>
-                  <li>English</li>
-                  <li>Scientific Notation</li>
-                </ul>
-              </div>
-              <div class="clear"></div>
-              <div class="factlist">
-                <ul>
-                  <li><span>Orbit Size (semi-major axis):</span> 384,000 km</li>
-                  <li><span>Mean Radius:</span> 1737.5 km</li>
-                  <li><span>Volume: </span> 21,971,669,064 km&sup3;</li>
-                  <li><span>Mass:</span> 73,476,730,924,573,500,000,000 kg </li>
-                  <li>More Facts &#x25B6;</li>
-                </ul>
-              </div>
-          </div>
-
-          <div class="resources">
-            <header class="blue">Resources</header>
+          <div id="white_middle_container">
+            <div id="moon_box">
+              <img src="images/moon.jpg" alt="moon photograph">
+              <figcaption>The Galileo spacecraft sent back this image of the Moon as it headed into the outer solar system. The distinct bright ray crater at the bottom of the image is the Tycho impact basin.</figcaption>
+            </div>
+            <h3>10 Need-to-Know Things About Earth's Moon:</h3>
             <ul>
-              <li>Missions to the Moon</li>
-              <li>Images of the Moon</li>
-              <li>Videos about the Moon</li>
-              <li>NASA's Lunar Portal</li>
-              <li>Consolidated Lunar Atlas</li>
-              <li>Lunar Sample Laboratory (NASA Johnson Space Center)</li>
-              <li>Compare the Moon to other Planets/Moons</li>
+              <li>If the sun were as tall as a typical front door, Earth would be the size of a nickel and the moon would the size of a green pea.</li>
+              <li>The moon is Earth's satellite and orbits the Earth at a distance of about 384 thousand km (239 thousand miles) or 0.00257 AU.</li>
+              <li>The moon makes a complete orbit around Earth in 27 Earth days and rotates or spins at that same rate, or in that same amount of time. This causes the moon to keep the same side or face towards Earth during the course of its orbit.</li>
+              <li>The moon is a rocky, solid-surface body, with much of its surface cratered and pitted from impacts.</li>
+              <li>The moon has a very thin and tenuous (weak) atmosphere, called an exosphere.</li>
+              <li>The moon has no moons.</li>
+              <li>The moon has no rings.</li>
+              <li>More than 100 spacecraft been launched to explore the moon. It is the only celestial a body beyond Earth that has been visited by human beings (<a href="http://solarsystem.nasa.gov/missions/profile.cfm?MCode=Apollo">The Apollo Program</a>).</li>
+              <li>The moon's weak atmosphere and its lack of liquid water cannot support life as we know it.</li>
+              <li>Surface features that create the face known as the "Man in the moon" are impact basins on the moon that are filled with dark basalt rocks.</li>
             </ul>
-          </div>
 
-          <div class="calendar date-event">
-            <header class="gold">Calendar</header>
-            <ul>
-              <li><span>19 Sep 2013: </span>Full Moon (Harvest Moon)</li>
-              <li><span>26 Sep 2013: </span>Moon-LADEE Homeschool Day (11:00 am - 3:00 pm)</li>
-              <li><span>12 Oct 2013: </span>Skies Daily show - LADEE the first moon launch from Virginia (1:30 pm - 5:00 PM)</li>
-              <li><span>12 Oct 2013: </span>International Observe the Moon Night</li>
-              <li><span>18 Oct 2013: </span>LiveSky Planetarium show LADEE</li>
-            </ul>
-          </div>
-
-          <div class="spotlight">
-            <header class="red">People Spotlight</header>
-            <ul>
-              <li class="featured">
-                <img src="images/HibbittsC-main.jpg">
-                <span class="name">Charles "Karl" Hibbitts</span>
-                "Don't worry about your exact path, but keep in mind where you want to end up." &#x25B6;
+            <img src="images/lunarportal_banner4.jpg">
+            <div class="secondary">
+              <div class="facts">
+                <header class="gold">Just the Facts</header>
+                <div class="units">
+                  <ul>
+                    <li class="active">Metric</li>
+                    <li>English</li>
+                    <li>Scientific Notation</li>
+                  </ul>
+                </div>
                 <div class="clear"></div>
-              </li>
-              <li>
-                <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)</span>
-                Astronomer
-              </li>
-              <li>
-                <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)</span>
-                Planetary Scientist
-              </li>
-              <li><span class="name">Glenn Light</span> - Director, Department of Sensor Systems and Nondestructive Evaluation</li>
-              <li><span class="name">Al Hibbs</span> - Scientist</li>
-              <li class="more">Meet More Space Explorers &#x25B6;</li>
-            </ul>
-          </div>
+                <div class="factlist">
+                  <ul>
+                    <li><span>Orbit Size (semi-major axis):</span> 384,000 km</li>
+                    <li><span>Mean Radius:</span> 1737.5 km</li>
+                    <li><span>Volume: </span> 21,971,669,064 km&sup3;</li>
+                    <li><span>Mass:</span> 73,476,730,924,573,500,000,000 kg </li>
+                    <li>More Facts &#x25B6;</li>
+                  </ul>
+                </div>
+            </div>
 
-          <div class="headlines date-event">
-            <header class="green">Headlines</header>
-            <ul>
-              <li><span>11 Sep 2013: </span>LADEE Project Manager Update: Initial Checkout Complete</li>
-              <li><span>7 Sep 2013: </span>LADEE Launches, Heads for the Moon</li>
-              <li><span>4 Sep 2013: </span>NASA Announces Media, Public Events for Upcoming Lunar Mission Launch</li>
-              <li><span>4 Sep 2013: </span>LADEE Project Manager Update: LADEE Ready for Launch</li>
-              <li><span>27 Aug 2013: </span>NASA-Funded Scientists Detect Water on Moon's Surface that Hints at Water Below</li>
-              <li class="more">More Headlines More Headlines &#x25B6;</li>
-            </ul>
-          </div>
+            <div class="resources">
+              <header class="blue">Resources</header>
+              <ul>
+                <li>Missions to the Moon</li>
+                <li>Images of the Moon</li>
+                <li>Videos about the Moon</li>
+                <li>NASA's Lunar Portal</li>
+                <li>Consolidated Lunar Atlas</li>
+                <li>Lunar Sample Laboratory (NASA Johnson Space Center)</li>
+                <li>Compare the Moon to other Planets/Moons</li>
+              </ul>
+            </div>
 
-          <div class="features date-event">
-            <header class="red">Science &amp; Technology Features</header>
-            <ul>
-              <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
-              <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
-              <li><span>28 Aug 2013: </span>Water on Moon's Surface Hints at Water Below</li>
-              <li><span>28 Aug 2013: </span>Space Laser To Prove Increased Broadband Possible</li>
-              <li><span>21 Aug 2013: </span>LADEE Launch Visibility</li>
-            </ul>
-          </div>
-    </div> <!--end of #white_section -->
+            <div class="calendar date-event">
+              <header class="gold">Calendar</header>
+              <ul>
+                <li><span>19 Sep 2013: </span>Full Moon (Harvest Moon)</li>
+                <li><span>26 Sep 2013: </span>Moon-LADEE Homeschool Day (11:00 am - 3:00 pm)</li>
+                <li><span>12 Oct 2013: </span>Skies Daily show - LADEE the first moon launch from Virginia (1:30 pm - 5:00 PM)</li>
+                <li><span>12 Oct 2013: </span>International Observe the Moon Night</li>
+                <li><span>18 Oct 2013: </span>LiveSky Planetarium show LADEE</li>
+              </ul>
+            </div>
+
+            <div class="spotlight">
+              <header class="red">People Spotlight</header>
+              <ul>
+                <li class="featured">
+                  <img src="images/HibbittsC-main.jpg">
+                  <span class="name">Charles "Karl" Hibbitts</span>
+                  "Don't worry about your exact path, but keep in mind where you want to end up." &#x25B6;
+                  <div class="clear"></div>
+                </li>
+                <li>
+                  <span class="name">Gerard Kuiper</span> - <span class="date">(1905 - 1973)</span>
+                  Astronomer
+                </li>
+                <li>
+                  <span class="name">Carl Sagan</span> - <span class="date">(1934 - 1996)</span>
+                  Planetary Scientist
+                </li>
+                <li><span class="name">Glenn Light</span> - Director, Department of Sensor Systems and Nondestructive Evaluation</li>
+                <li><span class="name">Al Hibbs</span> - Scientist</li>
+                <li class="more">Meet More Space Explorers &#x25B6;</li>
+              </ul>
+            </div>
+
+            <div class="headlines date-event">
+              <header class="green">Headlines</header>
+              <ul>
+                <li><span>11 Sep 2013: </span>LADEE Project Manager Update: Initial Checkout Complete</li>
+                <li><span>7 Sep 2013: </span>LADEE Launches, Heads for the Moon</li>
+                <li><span>4 Sep 2013: </span>NASA Announces Media, Public Events for Upcoming Lunar Mission Launch</li>
+                <li><span>4 Sep 2013: </span>LADEE Project Manager Update: LADEE Ready for Launch</li>
+                <li><span>27 Aug 2013: </span>NASA-Funded Scientists Detect Water on Moon's Surface that Hints at Water Below</li>
+                <li class="more">More Headlines More Headlines &#x25B6;</li>
+              </ul>
+            </div>
+
+            <div class="features date-event">
+              <header class="red">Science &amp; Technology Features</header>
+              <ul>
+                <li><span>16 Sep 2013: </span>Watch Out for the Harvest Moon</li>
+                <li><span>3 Sep 2013: </span>NASA Mission To Study Mysterious Lunar Twilight Rays</li>
+                <li><span>28 Aug 2013: </span>Water on Moon's Surface Hints at Water Below</li>
+                <li><span>28 Aug 2013: </span>Space Laser To Prove Increased Broadband Possible</li>
+                <li><span>21 Aug 2013: </span>LADEE Launch Visibility</li>
+              </ul>
+            </div>
+      </div> <!--end of #white_section -->
+    </div><!--end of #wrapper -->
   </body>
 
 </html>
